--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,22 @@
             <artifactId>eddsa</artifactId>
             <version>0.3.0</version>
         </dependency>
+        <!-- Test 용 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.0</version>            
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>        
     </dependencies>
 
     <distributionManagement>
