--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@
             <artifactId>moshi-adapters</artifactId>
             <version>1.13.0</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.33</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-WebSocket</artifactId>
@@ -73,7 +73,21 @@
             <groupId>net.i2p.crypto</groupId>
             <artifactId>eddsa</artifactId>
             <version>0.3.0</version>
-        </dependency>      
+        </dependency>
+        <!--Serialize/Deserialize-->  
+        <dependency>
+            <groupId>org.borshj.borshj</groupId>
+            <artifactId>easypay</artifactId>
+            <version>0.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/borshj/borshj-0.0.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.10</version>
+            <scope>test</scope>
+        </dependency>                
     </dependencies>
 
     <distributionManagement>
