--- a/pom.xml
+++ b/pom.xml
@@ -8,23 +8,49 @@
     <name>solanaj</name>
     <url>https://github.com/skynetcapital/solanaj</url>
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <!--  include javadoc/source -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                    <goal>jar</goal>
+                    </goals>
+                </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                <execution>
+                <id>attach-sources</id>
+                <goals>
+                <goal>jar</goal>
+                </goals>
+                </execution>
+                </executions>
+            </plugin>      
+            <!-- -->       
+        </plugins>
     </build>
     <properties>
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>          
     </properties>
     <dependencies>
         <dependency>
@@ -53,12 +79,6 @@
             <artifactId>moshi-adapters</artifactId>
             <version>1.13.0</version>
         </dependency>
-        <!-- <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
-            <version>1.7.33</version>
-            <scope>test</scope>
-        </dependency> -->
         <dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-WebSocket</artifactId>
@@ -67,7 +87,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>RELEASE</version>
+            <version>1.18.22</version>
         </dependency>
         <dependency>
             <groupId>net.i2p.crypto</groupId>
@@ -76,12 +96,12 @@
         </dependency>
         <!--Serialize/Deserialize-->  
         <dependency>
-            <groupId>org.borshj.borshj</groupId>
-            <artifactId>easypay</artifactId>
+            <groupId>org.near</groupId>
+            <artifactId>borshj</artifactId>
             <version>0.0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/borshj/borshj-0.0.0.jar</systemPath>
-        </dependency>
+            <systemPath>${pom.basedir}/lib/borshj-0.0.0.jar</systemPath>
+          </dependency> 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -90,11 +110,11 @@
         </dependency>                
     </dependencies>
 
-    <distributionManagement>
+    <!-- <distributionManagement>
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/skynetcapital/solanaj</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement> -->
 </project>
